--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "pillbox-ehr",
+  "name": "pillbox-ehr-server-v2",
   "version": "1.0.0",
+  "description": "Pillbox EHR self-hosted (Option 3) - Node/Express + SQLite, EMS/hospital hybrid login, audit logs",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "init-db": "node db_init.js"
   },
   "dependencies": {
+    "better-sqlite3": "^8.0.0",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "body-parser": "^1.20.2"
+    "multer": "^1.4.5",
+    "body-parser": "^1.20.2",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "cookie-parser": "^1.4.6"
   }
 }
